fixed grid overflow, added hobbies & education, closes #10 closes #11

--- a/app/static/styles/catherine.css
+++ b/app/static/styles/catherine.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
+* {
+	box-sizing: border-box;
+}
+
 /* general styles */
 h1,
 h2,
@@ -23,7 +27,7 @@ li {
 }
 
 section {
-	margin-top: 20px;
+	margin-top: 25px;
 }
 /* body */
 body {
@@ -108,9 +112,12 @@ body {
 	padding: 25px;
 
 	display: grid;
-	grid-template-columns: auto auto;
+	grid-template-columns: 1fr 4fr;
 }
 
+.grid > * {
+	min-width: 0px;
+}
 #profile-picture img,
 .profile-picture img {
 	border-radius: 100%;
@@ -122,12 +129,67 @@ body {
 	width: 100%;
 }
 
-.content {
+.content-wrapper {
 	margin-left: 25px;
 }
+
 /* about me */
 .about-me li {
 	font-size: 1rem;
+}
+
+/* hobbies */
+.hobbies .grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+
+	gap: 10px;
+}
+
+.hobbies .grid div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	flex-direction: column;
+
+	border: solid 1px #c4a7e7;
+}
+
+.hobbies .grid .img {
+	width: 100%;
+	height: 200px;
+
+	object-fit: cover;
+	background-size: cover;
+	background-position: center;
+
+	position: relative;
+}
+
+.hobbies .grid .img::before {
+	position: absolute;
+	content: " ";
+
+	width: 100%;
+	height: 100%;
+	background-color: #232136;
+	opacity: 0.7;
+}
+
+.img.games:after {
+	position: absolute;
+	content: "Games";
+}
+
+.img.choir::after {
+	position: absolute;
+	content: "Choir";
+}
+
+.img.coding::after {
+	position: absolute;
+	content: "Hackathons";
 }
 
 /*================================== TIMELINE ==================================*/
@@ -210,6 +272,10 @@ body {
 .timeline-content p:last-child {
 	margin-bottom: 0;
 }
+
+#last {
+	padding-bottom: 0;
+}
 /*----- TIMELINE PERIOD -----*/
 .period {
 	padding: 0;
@@ -268,14 +334,15 @@ circle.plot {
 
 /* mobile responsive */
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 991px) {
 	.profile {
 		display: flex;
 		flex-direction: column;
 
 		overflow: hidden;
+		width: 90%;
 	}
-	.content {
+	.content-wrapper {
 		margin-left: 0;
 	}
 
@@ -284,5 +351,11 @@ circle.plot {
 		z-index: 1000;
 		max-width: 200px;
 		display: none;
+	}
+}
+
+@media only screen and (max-width: 1475px) {
+	.profile {
+		grid-template-columns: 2fr 5fr;
 	}
 }
